--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-JWT_SECRET = 70bee2ebf348d151
-MONGODB_URI = 'mongodb+srv://mohit:Mohitn53_@cluster0.urstgdj.mongodb.net/users'
+JWT_SECRET = 
+MONGODB_URI = 
